--- a/package.json
+++ b/package.json
@@ -1,35 +1,89 @@
 {
-  "name": "test",
-  "version": "1.0.0",
+  "name": "app",
   "main": "expo-router/entry",
+  "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "reset-project": "node ./scripts/reset-project.js",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
-    "deploy": "npx expo export -p web && npx eas-cli@latest deploy"
+    "test": "jest --watchAll",
+    "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "^53.0.4",
-    "expo-constants": "~17.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.3",
-    "expo-splash-screen": "~0.30.7",
+    "@expo/vector-icons": "^14.1.0",
+    "@gorhom/bottom-sheet": "^5.1.8",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-google-signin/google-signin": "^15.0.0",
+    "@react-native-masked-view/masked-view": "0.3.2",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-native-voice/voice": "^3.2.4",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@stripe/stripe-react-native": "0.45.0",
+    "axios": "^1.10.0",
+    "expo": "53.0.20",
+    "expo-av": "^15.1.6",
+    "expo-blur": "~14.1.5",
+    "expo-constants": "~17.1.6",
+    "expo-dev-client": "~5.2.2",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.6",
+    "expo-router": "~5.1.4",
+    "expo-secure-store": "^14.2.3",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
-    "nativewind": "^4.0.1",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.9",
+    "expo-updates": "~0.28.17",
+    "expo-web-browser": "~14.2.0",
+    "lottie-react-native": "^7.2.2",
+    "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.1",
+    "react-native": "0.79.5",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.20.1",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-reanimated-carousel": "^4.0.2",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.1",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.0"
+    "react-native-webview": "13.13.5",
+    "react-redux": "^9.2.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
-    "typescript": "~5.8.3"
+    "@types/react-test-renderer": "^18.3.0",
+    "jest": "^29.2.1",
+    "jest-expo": "~53.0.7",
+    "react-native-dotenv": "^3.3.1",
+    "react-native-svg-transformer": "^1.5.1",
+    "react-test-renderer": "19.0.0",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "listUnknownPackages": false
+      }
+    }
+  }
 }
