--- a/package.json
+++ b/package.json
@@ -17,54 +17,39 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.8",
-    "@react-native-community/datetimepicker": "^8.4.4",
-    "@react-native-community/slider": "4.5.6",
-    "@react-native-google-signin/google-signin": "^15.0.0",
-    "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-native-picker/picker": "2.11.1",
-    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@reduxjs/toolkit": "^2.8.2",
-    "@stripe/stripe-react-native": "0.45.0",
     "axios": "^1.10.0",
-    "expo": "53.0.20",
-    "expo-av": "^15.1.6",
+    "expo": "53.0.22",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
-    "expo-dev-client": "~5.2.2",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.5",
-    "expo-location": "~18.1.6",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "^14.2.3",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.9",
-    "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
-    "lottie-react-native": "^7.2.2",
+    "lottie-react-native": "7.2.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-google-places-autocomplete": "^2.5.7",
-    "react-native-maps": "1.20.1",
-    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "^15.12.1",
-    "react-native-web": "^0.20.0",
+    "react-native-svg": "15.11.2",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1"
+    "@react-native-community/datetimepicker": "8.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -72,12 +57,11 @@
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "~53.0.10",
     "react-native-dotenv": "^3.3.1",
     "react-native-svg-transformer": "^1.5.1",
-    "react-test-renderer": "19.0.0",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true,
   "expo": {
