--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "eas:alt": "export $(cat .env.local | xargs) && eas"
   },
   "jest": {
     "preset": "jest-expo"
@@ -58,6 +59,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
+    "eas-cli": "^16.18.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.10",
     "react-native-dotenv": "^3.3.1",
