--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# EXPO_PUBLIC_API_URL = https://lightsync-server.onrender.com
-EXPO_PUBLIC_API_URL = http://192.168.43.242:3333
+EXPO_PUBLIC_API_URL = https://lightsync-server.onrender.com
+# EXPO_PUBLIC_API_URL = http://192.168.43.242:3333
