--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.5",
     "expo-secure-store": "~14.2.4",
+    "expo-speech": "^14.0.7",
     "expo-splash-screen": "~0.30.9",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
