--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 EXPO_PUBLIC_API_URL = https://lightsync-server.onrender.com
 # EXPO_PUBLIC_API_URL = http://192.168.43.242:3333
+EXPO_PUBLIC_GOOGLE_SPEECH_API_KEY=AIzaSyDdHwZvXXBsN5jE-O4DFu_Bh0QvV2poZR4
+ 
