--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.5",
     "expo-secure-store": "~14.2.4",
-    "expo-speech": "^14.0.7",
+    "expo-speech": "~13.1.7",
     "expo-splash-screen": "~0.30.9",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.11",
@@ -54,7 +54,10 @@
     "react-native-svg": "15.11.2",
     "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "expo-image": "~2.4.0",
+    "expo-av": "~15.1.7",
+    "expo-file-system": "~18.1.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
